--- a/css/theme.css
+++ b/css/theme.css
@@ -811,7 +811,7 @@ section {
 
 @media (max-width: 1600px) {
     .au-input--xl {
-        min-width: 350px;
+        min-width: 450px;
     }
 }
 
@@ -4575,6 +4575,7 @@ section {
     -moz-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 28px;
 }
 
@@ -14648,4 +14649,13 @@ section {
 
 .vue-lists ul, .vue-lists ol {
     padding-left: 30px;
+}
+
+.select-filter {
+    font-family: inherit;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    padding: 0 20px 0 40px;
+    margin: 1px 20px 1px 20px;
 }
