--- a/css/theme.css
+++ b/css/theme.css
@@ -1246,10 +1246,10 @@ section {
     -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
+    -webkit-justify-content: flex-end;
     -moz-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
